--- a/.dev/sass/mixins/_global.scss
+++ b/.dev/sass/mixins/_global.scss
@@ -372,6 +372,14 @@ select { width: 100%; }
 	padding: 0 50px;
 	margin-top: 30px;
 	&:hover {
-		color: #fff;
+		color: contrast-color($color-background-button,#fff,#000,25%);
+		background: lighten($color-background-button,3%);
+	}
+
+	&:focus
+	&:active{
+		color: #fff !important;
+		background: lighten($color-background-button,3%);
+		outline: 0;
 	}
 }
