--- a/.dev/sass/partials/_widgets.scss
+++ b/.dev/sass/partials/_widgets.scss
@@ -9,7 +9,7 @@ $widget-bg: #fff !default;
 	}
 
 	&,p,ul,ol{
-		font-family: $widget-font-family;
+		font-family: $secondary-font-family;
 		font-size: $widget-font-size;
 	}
 }
