--- a/.dev/sass/partials/_typography.scss
+++ b/.dev/sass/partials/_typography.scss
@@ -7,7 +7,6 @@
 $include-html-type-classes: $include-html-classes !default;
 
 // We use these to control header font styles
-$header-font-family: $body-font-family !default;
 $header-font-weight: 300 !default;
 $header-font-style: $font-weight-bold !default;
 $header-font-color: #222 !default;
@@ -228,7 +227,7 @@ p {
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
-	font-family: $header-font-family;
+	font-family: $primary-font-family;
 	font-weight: $header-font-weight;
 	font-style: $header-font-style;
 	color: $header-font-color;
@@ -429,7 +428,6 @@ blockquote {
 	padding: 0 20px;
 	border-#{$default-float}: $blockquote-border;
 	overflow: hidden;
-	font-family: $header-font-family;
 	font-style: italic;
 
 	p {
