--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2869,11 +2869,14 @@ header .main-navigation-container .menu {
     header .main-navigation-container .menu li a {
       display: block;
       font-family: "Oswald", sans-serif;
-      line-height: 1.2;
+      line-height: 1.7;
+      border-bottom: rgba(255, 255, 255, 0.4) 1px solid;
       font-size: 24px;
       font-weight: 300;
       color: #fff;
       position: relative; }
+    header .main-navigation-container .menu li:last-child a {
+      border-bottom: 0; }
   header .main-navigation-container .menu .menu-item-has-children li > a {
     padding: .5em 1em; }
   header .main-navigation-container .menu li {
@@ -2895,6 +2898,9 @@ header .main-navigation-container .menu {
       margin: 0 0 0 0;
       list-style: none;
       position: relative; }
+      header .main-navigation-container .menu li a {
+        line-height: 1.3;
+        border: none; }
       header .main-navigation-container .menu li.current-menu-item, header .main-navigation-container .menu li:hover {
         background-color: rgba(0, 0, 0, 0.3); }
         header .main-navigation-container .menu li.current-menu-item > a, header .main-navigation-container .menu li:hover > a {
@@ -2956,7 +2962,8 @@ header .main-navigation-container .menu {
 
 .side-masthead {
   padding: 0 35px;
-  position: relative;
+  position: fixed;
+  width: 100%;
   text-align: center;
   z-index: 9999;
   background-color: rgba(25, 25, 25, 0.95); }
@@ -2999,7 +3006,6 @@ header .main-navigation-container .menu {
   @media screen and (min-width: 783px) {
     .side-masthead {
       display: block;
-      position: fixed;
       right: 0;
       width: 250px;
       bottom: 0;
