--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3789,7 +3789,7 @@ body.layout-one-column-narrow #content {
     clear: both; }
   @media screen and (min-width: 900px) {
     .site-header[style] {
-      max-height: 600px;
+      max-height: 800px;
       min-height: 500px; } }
 
 .featured-content .entry-header {
@@ -3860,6 +3860,9 @@ body.layout-one-column-narrow #content {
     font-family: "Droid Serif", serif;
     font-size: 14px;
     line-height: 20px; }
+    .hero-widget div.textwidget p {
+      font-size: 14px;
+      line-height: 20px; }
 
 @media all and (min-width: 600px) {
   .hero-widget {
@@ -3872,7 +3875,10 @@ body.layout-one-column-narrow #content {
     .hero-widget div.textwidget {
       font-family: "Droid Serif", serif;
       font-size: 18px;
-      line-height: 24px; } }
+      line-height: 24px; }
+      .hero-widget div.textwidget p {
+        font-size: 18px;
+        line-height: 24px; } }
 
 @media all and (min-width: 1100px) {
   .hero-widget {
@@ -3885,7 +3891,10 @@ body.layout-one-column-narrow #content {
     .hero-widget div.textwidget {
       font-family: "Droid Serif", serif;
       font-size: 24px;
-      line-height: 36px; } }
+      line-height: 36px; }
+      .hero-widget div.textwidget p {
+        font-size: 24px;
+        line-height: 36px; } }
 
 .site-footer {
   background-color: #414242;
